Capitalize 'P' in solutiontitle
Oops

--- a/prelude.tex
+++ b/prelude.tex
@@ -1,7 +1,8 @@
 \documentclass[noboxes,qed]{homework}
 \hwtype{Chapter}
+
 \problemtitle{Exercise}
-\solutiontitle{proof}
+\solutiontitle{Proof}
 
 \name{Jack Gallagher}
 \course{Homotopy Type Theory}
